--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,5 @@
 /* add home page styles here */
-.dog {
+.cat {
   width: 30%;
   display: flex;
   flex-direction: column;
@@ -9,7 +9,7 @@
 
 }
 
-.dog img {
+.cat img {
   width: 100%;
   border-radius: 50%;
   
